--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
 
@@ -21,7 +21,7 @@ body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
-  background-color: #000;
+  /* background-color: #000; */
 }
 
 * {
